--- a/.tmp/public/src/app/committee/bills.tpl.html
+++ b/.tmp/public/src/app/committee/bills.tpl.html
@@ -9,6 +9,7 @@
     <li><a href="committee/{{committee.urlTitle}}">discussion</a></li>
     <!--<li><a href="committee/{{committee.urlTitle}}">polls</a></li>-->
     <li><a href="committee/{{committee.urlTitle}}/members">members</a></li>
+    <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
   </ul>
 </div>
 <div id="main-container">
