--- a/.tmp/public/src/app/login/index.tpl.html
+++ b/.tmp/public/src/app/login/index.tpl.html
@@ -26,6 +26,6 @@
         </div>
     </div>
     <hr>
-    <a href="/register">don't have an account?</a>
+    <a href="/register">register an account</a>
 </div>
 <!--<div ng-include="'footer/index.tpl.html'"></div>-->
