--- a/.tmp/public/src/app/committee/discussion.tpl.html
+++ b/.tmp/public/src/app/committee/discussion.tpl.html
@@ -12,11 +12,18 @@
   </ul>
 </div>
 <div id="main-container">
-  <div class="committee-title">
+ <div class="committee-title">
     <h1>{{committee.title}}</h1>
   </div>
-  <h1>Discussion</h1>
-  <div ng-repeat="post in posts">
-    <h4>post {{post}}</h4>
+  <md-divider ></md-divider>
+  <h2>discussion</h2>
+  <md-divider ></md-divider>
+  <div class="committeeDiscussionContainer">
+    <div class="committeeDiscussion" ng-repeat="discussion in posts">
+      <a href="/discussion/{{discussion}}">
+        <h4>{{discussion}}</h4>
+        <md-divider ></md-divider>
+      </a>
+    </div>
   </div>
 </div>
