--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -21,14 +21,17 @@
         <p>seeing past partisan politics</p>
         <p>crowd-sourced government</p>
         -->
-        <p>continual open ballot elections</p>
         <!--decision making influnce-->
         <!--<p>you have to choose,</p>-->
-        <p>direct input on policy</p>
+        <p>with direct input on policy your voice counts</p>
+        <p>continual open ballot elections - represent others at anytime</p>
+
         <!--<p>as grandular as it goes, voice your opinion on what matters, law</p>-->
         <hr>
         <a href="/about" class="btn btn-default">learn more</a>
-        <br>
+        <div style="height:100px;"></div>
+        <div style="height:100px;"></div>
+        <div style="height:100px;"></div>
       </div>
 
       <div id="register">
