--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -21,10 +21,11 @@
         <p>seeing past partisan politics</p>
         <p>crowd-sourced government</p>
         -->
-        <p>continual open ballot elections</p>
         <!--decision making influnce-->
         <!--<p>you have to choose,</p>-->
-        <p>direct input on policy</p>
+        <p>with direct input on policy your voice counts</p>
+        <p>continual open ballot elections - represent others at anytime</p>
+
         <!--<p>as grandular as it goes, voice your opinion on what matters, law</p>-->
         <hr>
         <a href="/about" class="btn btn-default">learn more</a>
