--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -4,7 +4,7 @@
             <mask class="intro-mask" id="intro-mask" x="0" y="0" width="100%" height="100%">
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
                 <text x="960" y="46%" class="medium-text desktop">build empowerment, change consensus</text>
-                <text x="960" y="44%" class="medium-text mobile">empowering change</text>
+                <text x="960" y="44%" class="medium-text mobile">build empowerment, change consensus</text>
                 <text x="960" y="51%" class="small-text mantra">direct input on policy, be the voice of the internet</text>
                 <text x="960" y="67.5%" class="small-text learn-more">learn more</text>
                 <a href="#about" du-smooth-scroll>
