--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -3,29 +3,22 @@
 		<img src="/images/capitol.jpg" alt="">
 		<div class="info">
       	<h3>Empowering the internet</h3>
-      	<!--<h3>Seeing past partisan politics</h3>-->
-      	<p>vote and have your voice heard, come together with the collective power of the internet</p>
 		</div>
 	</div>
 </div>
 <div class="about-container">
 	<div id="section1">
 		<h2>the voice of the internet</h2>
-		<p>a political network</p>
 	</div>
 	<div id="section2">
-		<p>real time voting</p>
-		<!--<p>bylaw generation</p>-->
-		<p>direct input on policy</p>
-		<p>decision making influence</p>
+		<p>real time input on policy</p>
+		<p>decision making influence in the power of your hands</p>
 	</div>
 	<div id="section3">
-	    <p>select others to represent you at any time</p>
-	    <p>continual open ballot elections</p>
+	    <p>with continual open ballot elections, select others to represent you at any time</p>
 	</div>
 	<div id="section4">
-		<p>we believe in direct democracy</p>
-		<!--we believe in fostering engaged communities...-->
+		<p>power to the people</p>
 		<img style="height:64px;" src="images/voetr_icon.png"/>
 	</div>
 </div>
