--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -15,9 +15,9 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/about">about</a></li>
-        <li><a href="/committees">committees</a></li>
-        <li><a href="/search">search</a></li>
+        <li ng-show="!currentUser"><a href="/about">about</a></li>
+        <!--<li><a href="/committees">committees</a></li>-->
+        <li><a href="/search">discover</a></li>
 
         <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
           <div class="form-group">
