--- a/.tmp/public/styles/css/about.css
+++ b/.tmp/public/styles/css/about.css
@@ -1,31 +1,37 @@
-.about-container{
-	margin-top:5%;
+
+
+.imageContainer {
+  overflow:hidden;
+  //min-height: 100vh;
+  min-height: 500px;
+  font-family: Jura;
+  margin:0;padding:0;border:0 none;position: relative;
 }
-#section1{
-  height:300px;
-  padding-left:10%;
-  padding-right:10%;
+.imageContainerDiv {
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAAEFsT2yAAAACXBIWXMAAAsSAAALEgHS3X78AAAAFElEQVR4nGNhYGBwYIET////ZwAAETIDym2lzEcAAAAASUVORK5CYII=);
+  background-size: 2px 2px;
+  background-repeat: repeat;
+  background-position: 0 0;
+  width: 100%;
+  //height: 100vh;
+  height:500px;
+  display: flex;
+  flex-direction: column;
 }
-#section2{
-  height:300px;
-  background-color:rgb(225,225,225);
-  padding-top:5%;
-  padding-left:10%;
-  padding-right:10%;
+.imageContainerDiv h1 {
+  color: rgba(255,255,255,0.9);
+  font-size: 50px;
+  font-weight: 400;
+  text-align: center;
+  margin: auto;
+  margin-left:10%;
 }
-#section3{
-  height:300px;
-  background-color:rgb(215,215,215);
-  padding-top:5%;
-  padding-left:10%;
-  padding-right:10%;
-}
-#section4{
-  height:300px;
-  background-color:rgb(225,225,225);
-  padding-top:5%;
-  padding-left:10%;
-  padding-right:10%;
+.flexible {
+  max-height:500px;
+  position:absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .img-fill {
@@ -33,7 +39,7 @@
   display: block;
   overflow: hidden;
   position: relative;
-  text-align: center
+  text-align: left;
 }
 
 .img-fill img {
@@ -49,7 +55,7 @@
 }
 
 .heading-container .img-fill {
-  height: 100vh;
+  max-height: 700px;
   background:#000;
 }
 
@@ -66,13 +72,13 @@
 }
 
 .heading-container .img-fill img{
-	-webkit-filter: blur(3px);
+  -webkit-filter: blur(3px);
 }
 
 .heading-container .img-fill .info {
   position: absolute;
   top: 0px;
-  left: 0px;
+  left: 10%;
   width: 100%;
   z-index:3;
   top:30%;
@@ -96,4 +102,35 @@
   color:#FFF;
   text-align:center;
   overflow:hidden;
+}
+
+
+.about-container{
+	margin-top:5%;
+}
+#section1{
+  height:300px;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section2{
+  height:350px;
+  background-color:rgb(225,225,225);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section3{
+  height:350px;
+  background-color:rgb(215,215,215);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
+}
+#section4{
+  height:350px;
+  background-color:rgb(225,225,225);
+  padding-top:5%;
+  padding-left:10%;
+  padding-right:10%;
 }
