--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -2,34 +2,65 @@
 
   <!--if logged in-->
   <div ng-show="currentUser">
+    <div style="height:50px"></div>
     <div class="container">
-      <h1>welcome {{currentUser.username}}</h1>
-      <h4>committees</h4>
-      <h4>upcoming votes</h4>
-      <h4>your representatives</h4>
-      <h4>my constituents</h4>
+      <div class="col-md-4">
+        <img class="avatar" style="margin-top:0em" src="{{currentUser.avatarUrl}}"/>
+        <h2><a href="/member/{{currentUser.username}}">{{currentUser.username}}</a></h2>
+      </div>
+      <div class="col-md-8">
+        <h3>recommended votes</h3>
+        <div ng-repeat="vote in votes">
+          <h4>
+            {{vote.voteCount}}
+            <button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i></button>
+            <button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i></button>
+            <a href="/vote/{{vote.id}}">{{vote.title}}</a>
+          </h4>
+          <br><br>
+        </div>
 
-      <div ng-repeat="vote in votes">
-        {{vote.vote}} | <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+        <h3>my constituents</h3>
+        <div ng-repeat="constituent in constituents">
+          <img class="avatar" style="margin-top:0em;" src="{{constituent.constituent.avatarUrl}}"/>
+          <h4><a href="/member/{{constituent.constituent.username}}">{{constituent.constituent.username}}</a></h4>
+        </div>
+
+        <h3>my representatives</h3>
+        <div ng-repeat="representative in representatives">
+          <img class="avatar" style="margin-top:0em;" src="{{representative.representative.avatarUrl}}"/>
+          <h4><a href="/member/{{representative.representative.username}}">{{representative.representative.username}}</a></h4>
+        </div>
+
+        <div ng-repeat="vote in userVotes">
+          {{vote.vote}} | <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+        </div>
       </div>
     </div>
+    <div style="height:50px;"></div>
   </div>
   <!--/if logged in-->
 
 	<!--if not logged in-->
   <div ng-show="!currentUser">
     <div ng-include="'intro/index.tpl.html'"></div>
+
+    <!--
+    <div class="imageContainer">
+      <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+      <div class="imageContainerDiv">  
+        <h1>build empowerment, change consensus</h1>
+      </div>
+    </div>
+    -->
+
     <div id="about">
       <div id="information">
         <div class="container">
           <i style="font-size:256px;" class="fa fa-bullhorn"></i>
           <hr>
           <h4>be part of the movement</h4>
-          <!--
-          <p>seeing past partisan politics</p>
-          <p>crowd-sourced government</p>
-          -->
-          <!--decision making influnce-->
+          <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
           <p>with direct input on policy your voice counts</p>
           <p>continual open ballot elections - represent others at anytime</p>
 
@@ -49,6 +80,7 @@
 
       <div id="bills">
         <div class="container">
+          
           <h2><a href="/bills">bills</a></h2><hr>
           <h4>{{billCount}}</h4>
 
@@ -62,12 +94,6 @@
                     </a>
                   </md-card-title-text>
                 </md-card-title>
-                <!--
-                <md-card-actions layout="row" layout-align="center">
-                  <md-button>upvote</md-button>
-                  <md-button>downvote</md-button>
-                </md-card-actions>
-                -->
               </md-card>
             </div>
           </div>
