--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -7,10 +7,11 @@
 	      </div>
 		  <ul class="data-user">
 			<li><a><strong>{{committees.length}}</strong><span>Committees</span></a></li>
-			<li><a><strong>{{representing.length}}</strong><span>Representing</span></a></li>
+			<li><a><strong>{{constituents.length || 0}}</strong><span>Constituents</span></a></li>
+			<li><a><strong>{{representatives.length || 0}}</strong><span>Representatives</span></a></li>
 			<li><a><strong>{{voteCount}}</strong><span>Votes</span></a></li>
-			<li><a><strong>{{followers.length}}</strong><span>Followers</span></a></li>
-			<li><a><strong>{{following.length}}</strong><span>Following</span></a></li>
+			<!--<li><a><strong>{{followers.length}}</strong><span>Followers</span></a></li>
+			<li><a><strong>{{following.length}}</strong><span>Following</span></a></li>-->
 		  </ul>
 		  <!--
 		  <div class="container">
@@ -35,6 +36,9 @@
 	      <h2>{{member.username}}</h2>
 	      <!--<button class="btn btn-default">follow</button><br>-->
 	      <button class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button><br>
+
+	      <!--<button class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button>-->
+
 	      <!--can have dif reps per committee-->
 	      <!--represented by (list of reps with each committee)-->
 	      <div ng-show="currentUser.id == member.id">
@@ -50,17 +54,40 @@
 		</uib-tab>
 		<uib-tab heading="Committees">
 		</uib-tab>
-		<uib-tab heading="Representing">
+		<uib-tab heading="Constituents">
+			<md-card ng-repeat="constituent in constituents">
+				<md-card-title-text>
+					<a href="/member/{{constituent.constituent.username}}/">{{constituent.constituent.username}}</a>
+				</md-card-title-text>
+			</md-card>
 		</uib-tab>
-		<uib-tab heading="Followers">
+		<uib-tab heading="Representatives">
+			<md-card ng-repeat="representative in representatives">
+				<md-card-title-text>
+					<a href="/member/{{representative.representative.username}}/">{{representative.representative.username}}</a>
+				</md-card-title-text>
+			</md-card>
+		</uib-tab>
+		<!--<uib-tab heading="Followers">
 		</uib-tab>
 		<uib-tab heading="Following">
-		</uib-tab>
+		</uib-tab>-->
 		<uib-tab heading="Votes">
+			<md-card ng-repeat="vote in votes">
+				<md-card-title>
+					<md-card-title-text>
+						<p>{{vote.voteString}}</p> on behalf of {{constituents.length}} constituents about
+						<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
+						<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+					</md-card-title-text>
+				</md-card-title>
+			</md-card>
 		</uib-tab>
-		<uib-tab heading="Follow">
-		</uib-tab>
-		<uib-tab ng-show="currentUser.id == member.id" heading="Edit Profile">
+		<!--<uib-tab heading="Follow">
+		</uib-tab>-->
+		<!--<uib-tab heading="Select as a representative">
+		</uib-tab>-->
+		<uib-tab ng-click="goToAccount()" ng-show="currentUser.id == member.id" heading="Edit Profile">
 		</uib-tab>
 	</uib-tabset>
 	
@@ -69,7 +96,7 @@
 		<md-card ng-repeat="vote in votes">
 			<md-card-title>
 				<md-card-title-text>
-					<p>{{vote.voteString}}</p>
+					<p>{{vote.voteString}}</p> on behalf of {{constituents.length}} constituents about
 					<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
 					<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
 				</md-card-title-text>
