--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -3,6 +3,11 @@
 		<div ng-show="!searchQuery">
 			<h1>discover content</h1>
 			<p>trending</p>
+			<h4>committees</h4>
+			<h4>members</h4>
+			<h4>bills</h4>
+			<h4>votes</h4>
+			
 		</div>
 		<div ng-show="searchQuery">
 			<div>
