--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -50,6 +50,7 @@
                 id: '<%= currentUser.id %>',
                 username: '<%= currentUser.username %>',
                 email: '<%= currentUser.email %>',
+                avatarUrl: '<%= currentUser.avatarUrl %>',
                 first_name: '<%= currentUser.first_name %>',
                 createdAt: '<%= currentUser.createdAt %>',
                 updatedAt: '<%= currentUser.updatedAt %>'
@@ -101,8 +102,9 @@
     <script src="/src/common/models/bill.js"></script>
     <script src="/src/common/models/comment.js"></script>
     <script src="/src/common/models/committee.js"></script>
+    <script src="/src/common/models/follower.js"></script>
     <script src="/src/common/models/index.js"></script>
-    <script src="/src/common/models/post.js"></script>
+    <script src="/src/common/models/representative.js"></script>
     <script src="/src/common/models/search.js"></script>
     <script src="/src/common/models/user.js"></script>
     <script src="/src/common/models/vote.js"></script>
