--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -60,10 +60,10 @@
 
 	<h3>connected accounts</h3>
 	<md-divider></md-divider><br>
-	<button class="btn btn-primary">connect facebook</button>
-	<button class="btn btn-primary">connect twitter</button>
-	<button class="btn btn-primary">connect google</button>
-	<button class="btn btn-primary">connect btc wallet</button>
+	<button class="btn btn-primary" href="/auth/facebook">connect facebook</button>
+	<button class="btn btn-primary" href="/auth/twitter">connect twitter</button>
+	<button class="btn btn-primary" href="/auth/google">connect google</button>
+	<button class="btn btn-primary" href="/auth/btc">connect btc wallet</button>
 	<br><br>
 	{{user.passports}}
 
