--- a/.tmp/public/src/app/login/index.tpl.html
+++ b/.tmp/public/src/app/login/index.tpl.html
@@ -1,8 +1,8 @@
 <!--login-->
-<div class="login-form" style="text-align:center;min-height:100%;">
+<div class="login-form container" style="min-height:100%;">
 
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-12">
             <h3>Login</h3><hr>
             <form class="form-horizontal" role="form" action="/auth/local" method="post">
                 <div class="form-group">
@@ -26,6 +26,10 @@
         </div>
     </div>
     <hr>
-    <a href="/register">register an account</a>
+    <div class="row">
+        <div style="text-align:center">
+            <a href="/register">register an account</a>
+        </div>
+    </div>
 </div>
 <!--<div ng-include="'footer/index.tpl.html'"></div>-->
