--- a/assets/src/app/committee/members.tpl.html
+++ b/assets/src/app/committee/members.tpl.html
@@ -25,8 +25,10 @@
         <img src="{{member.avatarUrl}}" style="height:64px;">
         <h4>{{member.username}}</h4>
       </a>
-      <p>representing x</p>
+      <p>{{member}}</p>
       <button class="btn btn-primary">select as representative</button>
     </div>
   </div>
 </div>
+<div ng-include="'footer/index.tpl.html'"></div>
+
