--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -1,8 +1,8 @@
 <!--register-->
-<div class="register-form" style="text-align:center">
+<div class="register-form container">
 
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-12">
             <h3>Create an Account</h3><hr>
             <form class="form-horizontal" role="form" action="/auth/local/register" method="post">
                 <div class="form-group">
@@ -45,6 +45,9 @@
         </div>
     </div>
     <hr>
-    <a href="/login">already have an account?</a>
-
+    <div class="row">
+        <div style="text-align:center">
+            <a href="/login">already have an account?</a>
+        </div>
+    </div>
 </div>
