--- a/assets/styles/css/committee.css
+++ b/assets/styles/css/committee.css
@@ -1,4 +1,5 @@
-#main-container{margin-left:250px;padding-left:30px;}
+#main-container{padding-left:30px;}
+
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
@@ -68,6 +69,7 @@
 
 
 @media(min-width:768px) {
+    #main-container{margin-left:250px;padding-left:30px;}
 
     #wrapper.toggled {
         padding-left: 0;
