fax2dc comunication

--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -19,6 +19,7 @@
 		<h2>the voice of the internet</h2>
 		<p>build empowerment, change consensus</p>
 		<p>directly impact the political landscape</p>
+		<img style="height:64px" src="http://www.freeiconspng.com/uploads/vote-icon-19.png"/>
 	</div>
 	<div id="section2">
 		<h4>direct your impact though real time input on policy</h4>
