--- a/.tmp/public/src/app/login/index.tpl.html
+++ b/.tmp/public/src/app/login/index.tpl.html
@@ -1,6 +1,5 @@
 <!--login-->
 <div class="login-form container" style="min-height:100%;">
-
     <div class="row">
         <div class="col-md-12">
             <h3>Login</h3><hr>
@@ -26,6 +25,13 @@
         </div>
     </div>
     <hr>
+    <!--<div class="row">
+        <div style="text-align:center">
+            <a href="/auth/facebook">facebook</a>
+            <a href="/auth/twitter">twitter</a>
+            <a href="/auth/google">google</a>
+        </div>
+    </div>-->
     <div class="row">
         <div style="text-align:center">
             <a href="/register">register an account</a>
