--- a/.tmp/public/src/app/register/index.tpl.html
+++ b/.tmp/public/src/app/register/index.tpl.html
@@ -1,6 +1,5 @@
 <!--register-->
 <div class="register-form container">
-
     <div class="row">
         <div class="col-md-12">
             <h3>Create an Account</h3><hr>
@@ -17,12 +16,12 @@
                         <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email" value="">
                     </div>
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label for="inputFirstName3" class="col-sm-2 control-label">First Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputFirstName3" name="first_name" placeholder="First Name" value="">
+                        <input type="text" class="form-control" id="inputFirstName3" name="firstName" placeholder="First Name" value="">
                     </div>
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
                     <div class="col-sm-10">
@@ -35,16 +34,16 @@
                     </div>
                 </div>
             </form>
-
-            <!--
-            <p>facebook</p>
-            <p>google</p>
-            <p>twitter</p>
-            -->
-
         </div>
     </div>
     <hr>
+    <!--<div class="row">
+        <div style="text-align:center">
+            <a href="/auth/facebook">facebook</a>
+            <a href="/auth/twitter">twitter</a>
+            <a href="/auth/google">google</a>
+        </div>
+    </div>-->
     <div class="row">
         <div style="text-align:center">
             <a href="/login">already have an account?</a>
