vote validation options - one voete per 'vote'

--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -31,6 +31,10 @@
 				<label class="modal-label">Last Name</label>
 				<input ng-model="user.lastName" required name="lastName" type="text">
 			</md-input-container>
+			<!--<md-input-container>
+				<label class="modal-label">Address</label>
+				<input ng-model="user.address" required name="Address" type="text">
+			</md-input-container>-->
 		</div>
 		<button type="submit" class="btn btn-primary">Save</button>
 	</form>
