--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,8 +1,13 @@
 <div class="imageContainer">
-	<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
-	<div class="imageContainerDiv">  
-		<h1>build empowerment, change consensus</h1>
-	</div>
+    <video class="flexible" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
+        <source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4">
+    </video>
+    <div class="imageContainerDiv">
+        <div class="intro-text">
+            <h1 class="light vBlue">foster empowerment, change consensus</h1>
+            <h1><b>are they listening?</b></h1>
+        </div>
+    </div>
 </div>
 <!--
 <div class="heading-container">
