--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -1,41 +1,20 @@
-<!--login-->
-<div class="login-form container" style="min-height:100%;">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Login</h3><hr>
-            <form class="form-horizontal" role="form" action="/auth/local" method="post">
-                <div class="form-group">
-                    <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputUsername3" name="identifier" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-sm-10">
-                        <button type="submit" class="btn btn-default">Sign in</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <hr>
-    <!--<div class="row">
-        <div style="text-align:center">
-            <a href="/auth/facebook">facebook</a>
-            <a href="/auth/twitter">twitter</a>
-            <a href="/auth/google">google</a>
-        </div>
-    </div>-->
-    <div class="row">
-        <div style="text-align:center">
-            <a href="/register">register an account</a>
-        </div>
+<div class="log-background">
+    <div class="blkoverlay"></div>
+    <div class="log-form">
+        <h2><span class="inline-logo"><i style="color:#2ab996" class="fa fa-check"></i>oetr</span> - login</h2>
+        <form role="form" action="/auth/local" method="post">
+            <input placeholder="username" title="username" type="text"> 
+            <input placeholder="password" title="username" type="password"> 
+            <button class="btn" type="submit">sign in</button> 
+            <a class="already" href="/register">register an account</a>
+        </form>
     </div>
 </div>
-<!--<div ng-include="'footer/index.tpl.html'"></div>-->
+
+<!--<div class="row">
+    <div style="text-align:center">
+        <a href="/auth/facebook">facebook</a>
+        <a href="/auth/twitter">twitter</a>
+        <a href="/auth/google">google</a>
+    </div>
+</div>-->
