--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -1,11 +1,10 @@
 <style>
-.navbar-inverse{background-color:rgba(36,36,46,1);}
+.navbar-inverse{background-color:rgb(26,26,26);}
 </style>
-
-<div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container center">
+<nav ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,23 +13,38 @@
       <a class="navbar-brand" href="/"><i style="color:#2ab996" class="fa fa-check"></i>oetr</a>
     </div>
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
+        <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
+          <div class="form-group">
+            <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder=" Search (Locations, Reps, etc.) ">
+          </div>
+        </form>
         <li ng-show="!currentUser"><a href="/about">about</a></li>
         <li><a href="/search">discover</a></li>
 
-        <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
-          <div class="form-group">
-            <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
-          </div>
-        </form>
 
-        <!--<li ng-show="currentUser"><a href="/account">account</a></li>-->
-        <li ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>
+        <li class="dropdown" ng-show="!currentUser">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-user"></i> <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/register">register</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/login">login</a></li>
+          </ul>
+        </li>
 
-        <li ng-show="currentUser"><a href="/logout">signout</a></li>
-        <li ng-show="!currentUser"><a href="/register">register</a></li>
-        <li ng-show="!currentUser"><a href="/login">login</a></li>
+        <li class="dropdown" ng-show="currentUser">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            {{currentUser.username}} <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/account">account</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/logout">signout</a></li>
+          </ul>
+        </li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
-</div>
+</nav>
