--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -69,14 +69,16 @@
 	<button class="btn btn-primary" href="/auth/google">connect google</button>
 	<button class="btn btn-primary" href="/auth/btc">connect btc wallet</button>
 	<br><br>
-	{{user.passports}}
+	<div ng-repeat="passport in user.passports">
+		{{passport.protocol}}
+	</div>
 
 	<h3>settings</h3>
 	<md-divider></md-divider><br>
 	<p>email settings</p>
 	<p>verified account</p>
 	<h4>government identification</h4>
-
+	<p>by providing official identification, government officials have more of an inventive to respond and your voice carries more weight.</p>
 	<div ngf-accept="'image/*'" ngf-drop ngf-select="uploadIdentification($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
 		<div>Drag photos or click here to upload.</div>
 		<div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div><img ng-show="user.identificationUrl" src="{{user.identificationUrl}}">
