--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -71,6 +71,7 @@
 	<br><br>
 	<div ng-repeat="passport in user.passports">
 		{{passport.protocol}}
+		{{passport.provider}}
 	</div>
 
 	<h3>settings</h3>
