--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -35,7 +35,9 @@
 	    <div class="user-profile-data container">
 	      <h2>{{member.username}}</h2>
 	      <!--<button class="btn btn-default">follow</button><br>-->
-	      <button class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button><br>
+
+	      <button ng-show="isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">remove as a representative</button><br>
+	      <button ng-show="!isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button><br>
 
 	      <!--<button class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button>-->
 
