--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -76,8 +76,15 @@
 
 	<h3>settings</h3>
 	<md-divider></md-divider><br>
-	<p>email settings</p>
-	<p>verified account</p>
+	<h4>email settings</h4>
+
+	<h4>contact settings</h4>
+	<p>send email</p>
+	<p>send fax</p>
+	<p>send letter</p>
+	<!--<p>all activity, per vote.. on creation of bill, on profile comment</p>-->
+
+	<h4>verified account</h4>
 	<h4>government identification</h4>
 	<p>by providing official identification, government officials have more of an inventive to respond and your voice carries more weight.</p>
 	<div ngf-accept="'image/*'" ngf-drop ngf-select="uploadIdentification($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
@@ -90,7 +97,6 @@
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{identificationPercentage}}%;"></div>
 	</div>
 	<br>
-
 	<p>ssn</p>
 
 	<div style="height:100px;"></div>
