--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -36,15 +36,15 @@
 	      <h2>{{member.username}}</h2>
 	      <!--<button class="btn btn-default">follow</button><br>-->
 
-	      <button ng-show="isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">remove as a representative</button><br>
+	      <button ng-show="isFollowing" class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button><br>
 	      <button ng-show="!isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button><br>
 
-	      <!--<button class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button>-->
+	      <button class="btn btn-default">contact</button><br>
 
 	      <!--can have dif reps per committee-->
 	      <!--represented by (list of reps with each committee)-->
 	      <div ng-show="currentUser.id == member.id">
-			<button class="btn btn-primary"><a href="/account">settings</a></button>
+			<a href="/account"><button class="btn btn-default">settings</button></a>
 		  </div>
 	      <br><br>
 	    </div>
