--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -5,7 +5,7 @@
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
                 <text x="960" y="40%" class="medium-text desktop">build empowerment, change consensus</text>
                 <text x="960" y="38%" class="medium-text mobile">build empowerment, change consensus</text>
-                <text x="960" y="45%" class="small-text mantra">with direct input on policy, direct your impact</text>
+                <text x="960" y="45%" class="small-text mantra">directly impact policy decisions</text>
                 <text x="960" y="67.5%" class="small-text learn-more">learn more</text>
                 <a href="#about" du-smooth-scroll>
                     <svg class="tri-before" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="883px" y="68%" width="150px" height="150px" viewBox="0 0 723 626" enable-background="new 0 0 723 626" xml:space="preserve">
