--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -4,7 +4,9 @@
 <div ui-view="vote">
 
 	<div class="voteContainer">
-		<h3>{{vote.title}}</h3>
+		<h3>{{vote.voteCount}} - {{vote.title}}</h3>
+		<h3>{{vote.plusCount}} - {{vote.minusCount}}</h3>
+		<!--<h3>{{vote.otherCount}}</h3>-->
 		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
         <button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
 		<h5><a href="bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
