--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -6,7 +6,8 @@
   margin:0;padding:0;border:0 none;position: relative;
 }
 .imageContainerDiv {
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAAEFsT2yAAAACXBIWXMAAAsSAAALEgHS3X78AAAAFElEQVR4nGNhYGBwYIET////ZwAAETIDym2lzEcAAAAASUVORK5CYII=);
+  background-color:rgba(0,0,0,0.35);
+  //background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAAEFsT2yAAAACXBIWXMAAAsSAAALEgHS3X78AAAAFElEQVR4nGNhYGBwYIET////ZwAAETIDym2lzEcAAAAASUVORK5CYII=);
   background-size: 2px 2px;
   background-repeat: repeat;
   background-position: 0 0;
